<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_menu_header"
    android:layout_width="match_parent"
    android:layout_height="192dp"
    android:background="@color/colorPrimaryDark"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/home_img_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/home_img_profile"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/home_txt_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_txt_fullname"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/home_txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_txt_email"
        android:textColor="@android:color/secondary_text_dark" />

</LinearLayout>